# WildFirePrediction

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
k8s/: deployment.yaml  ingress.yaml  secret.yaml.example  service.yaml
src/api/: main.py
src/data/: df_aggregated.py
src/models/: __init__.py  classifier.py  node.py  registry_loader.py  train.py  tree.py  utils.py  xgboost_from_scratch.py
