[project]
name = "WildFirePrediction"
version = "0.1.0"
description = "MLOps Project - Wildfire Prediction"
dependencies = [
    "fastapi>=0.136.0",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806"] 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
